packages/react-components/src/components/Search/Search.module.scss
$base-class: 'search-input';
$transition: 0.25s ease-in-out;
$transition-with-delay: 0.25s ease-in-out 0.25s;

.#{$base-class} {
  box-sizing: border-box;
  display: flex;
  position: relative;
  align-items: center;
  transition: all 0.25s ease-in-out;
  border: 1px solid var(--border-default);
  border-radius: 4px;
  background-color: var(--surface-basic-default);
  width: 100%;
  color: var(--content-default);

  &:hover {
    border-color: var(--border-hover);
    cursor: text;
  }

  &--compact {
    height: 32px;
  }

  &--medium {
    height: 36px;
  }

  &--large {
    height: 42px;
  }

  &--focused,
  &--focused:hover {
    border-color: var(--color-action-default);
  }

  &--disabled,
  &--disabled:hover {
    border-color: var(--border-disabled);
    background-color: var(--surface-basic-disabled);
    cursor: not-allowed;
    color: var(--content-disabled);
  }

  &--collapsable {
    transition: width $transition, background $transition-with-delay,
      border $transition-with-delay;
    border-color: transparent;
    background-color: transparent;
    width: 40px;

    &:hover {
      border-color: transparent;
    }

    .#{$base-class}__search-icon {
      cursor: pointer;
    }

    &--open {
      transition: border $transition, background $transition,
        width $transition-with-delay;
      border-color: var(--border-default);
      background-color: var(--surface-basic-default);
      width: 100%;

      &:hover {
        border-color: var(--border-hover);
      }

      &.#{$base-class}--focused,
      &.#{$base-class}--focused:hover {
        border-color: var(--color-action-default);
      }

      .#{$base-class}__search-icon {
        cursor: text;
      }
    }
  }

  &__search-icon {
    flex: 0 0 40px;
    justify-content: center;
    width: 40px;
    height: 100%;
  }

  &__clear-icon {
    display: inline-flex;
    flex: 0 0 40px;
    flex-shrink: 0;
    align-items: center;
    justify-content: center;
    margin-right: 6px;
    margin-left: 11px;
    outline: 0;
    border: 1px solid transparent;
    background: transparent;
    cursor: pointer;
    padding: 0;
    width: 40px;
    height: 100%;

    &:focus {
      border-color: var(--color-action-default);
    }
  }

  &__loader {
    display: flex;
    align-items: center;
    margin-right: 16px;
    margin-left: 11px;
    border-radius: 50%;
    background-color: var(--surface-basic-default);
    padding: 2px;
  }

  &__input {
    flex: 1 1;
    border: 0;
    background-color: transparent;
    padding: 0;
    width: 100%;
    line-height: 22px;
    color: inherit;
    font-size: 15px;
    font-weight: 400;

    &::placeholder {
      color: var(--content-disabled);
    }

    &:focus {
      outline: none;
    }
  }
}

